# python_Stepic

./: .gitignore  assigning_values.py  maths_operations.py  pyproject.toml  readme.md
basics/: assigning_values.py  list_tuple.py  maths_operations.py  string_handling.py
stepic/: alixe.txt  alixe_2.txt  dict.py  digits.py  divider_1.py  exception_file.py  factorial_sum.py  function_test.py  if.py  list_tuple.py  my_import.py  my_import2.py  save_read_json.py  string.py  triangle_number.py  while_test.py
stepic/files/: guess_book.txt  name.txt  read_file.py  write_file.py  write_file_1.txt
stepic/my_classes/: battery_car.py  die.py  el_car.py  lottery.py  my_car.py  my_dog.py  my_restaurant.py
stepic/tasks/: divider-2.py  natural_digits.py  sqrt_digit.py  triangle_number.py
stepic/testing/: city_function.py  test_cities.py
stepic/text_files/: new_txt.txt  print_file.txt
