[tool.poetry]
name = "stepic"
version = "0.1.0"
description = ""
authors = ["Vladimir Sarychev <svmyhome@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
